Fixes notice badge alignment. MUWM-1993

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -866,9 +866,9 @@ body {
         	       	.disclosure-title { position: absolute; top: 0; width: 100%; line-height: 80px; }
     	       	}
     	       	
-    	       	.disclosure-meta {  position: absolute; top: 50%; left: 0; right: 0; z-index: 1; line-height: 30px; margin-top: -15px;
+    	       	.disclosure-meta {  position: absolute; top: 50%; left: 0; right: 0; z-index: 1; line-height: 30px; margin-top: -13px;
         	       	
-        	       	.disclosure-unread { background-color: #555555; font-weight: 300; font-size:1em; position: absolute; right: 25px; top: 2px; z-index: 9999; }
+        	       	.disclosure-unread { background-color: #555555; font-weight: 300; font-size:1em; position: absolute; right: 25px; top: 4px; z-index: 9999; }
         	       	.badge { background-color: white; color:#444; font-weight:normal; border:1px solid #444;}
         	       	.disclosure-critical { position: absolute; bottom: -23px; color: #777; font-size: 12px; }
     	       	}
